# RobotMustFindAnything

./: .gitignore  README.md
doc/: aruco.md  benchmark.md  dinox.md  llm.md  realsense.md  ros2_ws.md  ros_ws.md  sam3.md
rofa/: det_aruco.py  test_dinox.py  test_roimap.py  test_sam3.py
rofa/aruco/: aruco_detector.py
rofa/benchmark/example/: discription.json
rofa/benchmark/spatial_localization/: motor42.py  zdt_ttl.py
rofa/dinox/: dinox.py
rofa/llm/: llm_query.py
rofa/realsense/: d435.py  realsense_base.py
rofa/ros2_ws/src/sensor_fusion_icp/: CMakeLists.txt  package.xml
rofa/ros2_ws/src/sensor_fusion_icp/src/: sensor_fusion_node.cpp
rofa/ros2_ws/src/sensor_fusion_ndt/: CMakeLists.txt  package.xml
rofa/ros2_ws/src/sensor_fusion_ndt/src/: ndt_fusion_node.cpp
rofa/ros_ws/src/FAST_LIO_ROS2/config/: mid360.yaml
rofa/sam3/: sam3_demo.py  sam3_segmentor.py
